--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -55,8 +55,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 36px;
-  height: 36px;
+  width: 30px;
+  height: 30px;
 }
 
 .icon-button:hover {
@@ -67,4 +67,8 @@
 .icon-button img {
   width: 20px;
   height: 20px;
+}
+
+.menu-link {
+  text-decoration: none;
 }
